# Autobot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
.claude/: settings.json  settings.local.json
.claude/agents/: builder.md  planner.md  reviewer.md
.claude/commands/: init-task.md
.claude/hooks/: analyze-observations.js  analyze-observations.py  post-edit-tests.py  progress-tracker.py  pyproject.toml  session-context.js  session-context.py  stop-loop.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  HOOKS.md  WORKFLOWS.md
src/: cli.js  launcher.js  scaffolder.js  ui.js
src/autobot/: __init__.py  cli.py  launcher.py  scaffolder.py
src/autobot/commands/: __init__.py
src/autobot/templates/: CLAUDE.md  __init__.py
src/autobot/templates/autobot/: plan.json  progress.md
src/autobot/templates/claude/: settings.json
src/autobot/templates/claude/agents/: fixer.md  planner.md
src/autobot/templates/claude/commands/: abort.md  resume.md
src/autobot/templates/claude/hooks/: analyze-observations.py  post-edit-tests.py  progress-tracker.py  session-context.py  stop-loop.py
templates/: CLAUDE.md
templates/autobot/: metrics.json  task.json
templates/claude/: settings.json
templates/claude/agents/: builder.md  fixer.md
templates/claude/commands/: init-task.md  pause.md  resume.md  status.md
templates/claude/hooks/: post-edit-tests.js  progress-tracker.js  stop-loop.js
templates/claude/skills/quality-gates/: SKILL.md
templates/claude/skills/task-decomposition/: SKILL.md
templates/claude/skills/test-first/: SKILL.md
tests/: __init__.py  cli.test.js  conftest.py  helpers.js  launcher.test.js  scaffolder.test.js  test_cli.py  test_launcher.py  test_scaffolder.py
