[project]
name = "autobot"
version = "0.1.0"
description = "Autonomous development assistant for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Autobot Team"}
]
keywords = ["claude", "ai", "development", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
autobot = "autobot.cli:cli"

[project.urls]
Homepage = "https://github.com/autobot/autobot"
Documentation = "https://github.com/autobot/autobot#readme"
Repository = "https://github.com/autobot/autobot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autobot"]

[tool.hatch.build.targets.wheel.force-include]
"src/autobot/templates" = "autobot/templates"

[tool.hatch.build.targets.sdist]
include = [
    "src/autobot/**/*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/autobot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (typer pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["autobot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
exclude = [
    "^.venv/",
    "^build/",
    "^tests/",
    "^src/autobot/templates/",
]

[[tool.mypy.overrides]]
module = [
    "typer.*",
    "rich.*",
]
ignore_missing_imports = true
